[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["Nate <nlarsen23.student@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sphinx-autobuild = "^2021.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
